--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FinalExam</string>
+    <string name="search">Search</string>
+    <string name="hint">Search an album</string>
+    <string name="text">There is no album available at the moment.</string>
 </resources>
